# WeChat-publish

./: .env  .env.example  BATCH_PUBLISH_MANUAL.md  README.md  RELEASE_README.md  WECHAT_PUBLISH_WORKFLOW.md  config.yaml  generate_images.py  publish_log.csv  publish_log.jsonl  publish_ready_queue.py  publish_to_wechat.py  pyproject.toml  requirements.txt
data/: content_discovery.db
drafts/: PUBLISH_GUIDE.md  README_BATCH_PUBLISH.md  article_final.html  article_five_dynasties.html  article_trust.html  cover_design.md  信任是场无限游戏.md
drafts/queue/2026-03-20-five-dynasties/: article.html  meta.json
drafts/queue/2026-03-21-scheduled-demo/: article.html  meta.json
drafts/queue/_template/: README.md  meta.json
references/: style-dna.md
scripts/: create_cover.py  publish_draft.py
src/content_discovery_bot/: __init__.py  analyzer.py  app.py  cli.py  collector.py  config.py  database.py  generator.py  models.py  workflow.py
src/content_discovery_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
